# pub_sub_v4l2_dmabuf_wayland

./: .gitignore  CMakeLists.txt  README.md  install-code-server-yocto.sh  run.sh
include/: egl_utils.hpp  socket_utils.hpp  v4l2_utils.hpp  wayland_utils.hpp
rust/: Cargo.toml  run.sh  test_dma.sh
rust/common/: Cargo.toml  build.rs
rust/common/src/: lib.rs  socket.rs  v4l2.rs
rust/publisher/: Cargo.toml
rust/publisher/src/: main.rs  publisher_dma.rs
rust/subscriber/: Cargo.toml  build.rs
rust/subscriber/src/: egl.rs  main.rs  wayland.rs
src/: egl_utils.cpp  publisher.cpp  socket_utils.cpp  subscriber.cpp  v4l2_utils.cpp  wayland_utils.cpp
